manifest/objects/mkto_si__Best_Bets_View_Detail__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__Best_Bets_View__c</fullName>
        <label>Best Bets View</label>
        <referenceTo>mkto_si__Best_Bets_View__c</referenceTo>
        <relationshipLabel>Best Bets View Details</relationshipLabel>
        <relationshipName>Best_Bets_View_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mkto_si__FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__FieldName__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__FieldNumber__c</fullName>
        <label>Field Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__LookupValue__c</fullName>
        <label>Lookup Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>is</fullName>
                </value>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__ShowField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Best Bets View Detail</label>
    <nameField>
        <label>Bets Bets View Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Bets View Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>